--- a/assets/styles/scss/benefits.scss
+++ b/assets/styles/scss/benefits.scss
@@ -27,12 +27,12 @@
   display: flex;
   align-items: flex-start;
   z-index: 1;
+  gap: 120px;
 }
 
 .benefits__title-block {
   display: flex;
   flex-direction: column;
-  width: 644px;
 }
 
 .benefits__title-rectangle {
@@ -43,15 +43,6 @@
 
 .benefits__title {
   padding-bottom: 28px;
-}
-
-.benefits__text-1 {
-  width: 275px;
-  margin-right: 111px;
-}
-
-.benefits__text-2 {
-  width: 490px;
 }
 
 .benefits__cards-block {
@@ -71,7 +62,6 @@
   height: 267px;
   box-shadow: 4px 4px 4px rgba(0, 0, 0, 0.15);
   padding: 40px 30px 30px 30px;
-  // top: 55%;
   bottom: -60%;
 }
 
@@ -93,9 +83,6 @@
   align-items: center;
   position: relative;
   flex-direction: column;
-  // max-width: 360px;
-  // width: 100%;
-  // height: 592px;
 }
 
 .benefits__card-pic {
