--- a/assets/styles/scss/container.scss
+++ b/assets/styles/scss/container.scss
@@ -2,4 +2,6 @@
   max-width: 1520px;
   // width: 100%;
   margin: 0 auto;
+  padding-left: 20px;
+  padding-right: 20px;
 }
